Improve diagnostics for LinkageError in case of ClassLoader mismatch
Closes gh-25940